modify it test controllers